- add dependency to web_readonly_bypass - price_unit and discount read only

--- a/views/views.xml
+++ b/views/views.xml
@@ -7,12 +7,26 @@
         <field name="groups_id" eval="[(6, 0, [ref('base.group_portal') ])]" />                
         <field name="arch" type="xml">                                   
             <field name="partner_id" position="attributes">
-              <attribute name="readonly">1</attribute>              
+                <attribute name="readonly">1</attribute>
             </field>
             <xpath expr="//tree/field[@name='price_unit']" position="attributes">
-              <attribute name="readonly">1</attribute>              
-            </xpath>                           
+                <attribute name="readonly">1</attribute>
+                <attribute name="context">{'readonly_by_pass': True}</attribute>
+            </xpath>
+            <xpath expr="//tree/field[@name='discount']" position="attributes">
+                <attribute name="readonly">1</attribute>
+                <attribute name="context">{'readonly_by_pass': True}</attribute>
+            </xpath>
         </field>
+    </record>
+    <record id="action_orders_portal" model="ir.actions.act_window">
+        <field name="view_id" ref="portal_sale.action_orders_portal"/>
+        <field name="name">Sale Orders</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">sale.order</field>
+        <field name="view_mode">tree,form</field>
+        <field name="context">{'readonly_by_pass': True}</field>
     </record>
   </data>
 </openerp>
+ 
